kubernetes/addons/messaging/emqx/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emqx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://emqx.default.internal.javiersant.com"
    gethomepage.dev/description: EMQX MQTT broker
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: emqx.svg
    gethomepage.dev/name: EMQX
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`emqx.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: emqx
          port: 18083
  tls:
    secretName: wildcard-javiersant-com-tls
